Add composer scripts for tests

--- a/composer.json
+++ b/composer.json
@@ -47,8 +47,11 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ],
-        "playground": [
-            "php artisan serve"
+        "test": [
+            "./vendor/bin/phpunit"
+        ],
+        "test:watch": [
+            "./vendor/bin/phpunit-watcher watch"
         ]
     },
     "extra": {
